--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "baseUrl": "src",
+    "paths": {
+      "public/*": ["../public/*"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
